--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "alux",
+  "name": "apice",
   "version": "1.0.0",
   "description": "DOM based framework for reactive canvas",
   "private": true,
-  "main": "./src/alux.js",
+  "main": "./src/apice.js",
   "scripts": {
     "start": "npm-run-all --parallel watch serve",
     "serve": "web-dev-server",
     "watch": "rollup -c -w",
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap"
   },
   "keywords": [
     "ui"
@@ -25,9 +25,12 @@
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@web/dev-server": "^0.1.18",
     "eslint": "^7.30.0",
+    "jsdom": "^17.0.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.53.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^11.1.2",
+    "tap": "^15.0.10"
   },
   "dependencies": {}
 }
