--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apice",
-  "version": "1.0.0",
-  "description": "DOM based framework for reactive canvas",
+  "version": "0.1.0",
+  "description": "DOM based front-end utility framework",
   "private": true,
   "main": "./src/apice.js",
   "scripts": {
@@ -9,12 +9,16 @@
     "serve": "web-dev-server",
     "watch": "rollup -c -w",
     "build": "rollup -c",
-    "test": "tap"
+    "test": "mocha",
+	"coverage": "c8 mocha"
   },
   "keywords": [
     "ui"
   ],
-  "author": "Frederid Palacios",
+  "author": "Codelightful",
+  "contributors": [
+	  "Frederid Palacios"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -24,13 +28,14 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@web/dev-server": "^0.1.18",
+    "c8": "^7.9.0",
     "eslint": "^7.30.0",
     "jsdom": "^17.0.0",
+    "mocha": "^9.1.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.53.2",
     "rollup-plugin-terser": "^7.0.2",
-    "sinon": "^11.1.2",
-    "tap": "^15.0.10"
+    "sinon": "^11.1.2"
   },
   "dependencies": {}
 }
