--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "apice",
   "version": "0.1.1",
   "description": "DOM based front-end utility framework",
-  "main": "./src/apice.js",
+  "main": "./src/apice.mjs",
   "scripts": {
     "start": "npm-run-all --parallel watch serve",
     "serve": "web-dev-server",
     "watch": "rollup -c -w",
     "build": "rollup -c",
     "test": "mocha",
-	"coverage": "c8 mocha"
+    "coverage": "c8 mocha"
   },
   "keywords": [
     "ui"
   ],
   "author": "Codelightful",
   "contributors": [
-	  "Frederid Palacios"
+    "Frederid Palacios"
   ],
   "license": "MIT",
   "devDependencies": {
@@ -28,7 +28,7 @@
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@web/dev-server": "^0.1.18",
     "c8": "^7.9.0",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "jsdom": "^17.0.0",
     "mocha": "^9.1.2",
     "npm-run-all": "^4.1.5",
