--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "apice",
   "version": "0.1.5",
   "description": "DOM based front-end utility framework",
+  "repository": "https://github.com/codelightful/apice/tree/v0.1.5",
   "main": "./src/apice.mjs",
   "scripts": {
     "start": "npm-run-all --parallel watch serve",
@@ -10,7 +11,10 @@
     "build": "rollup -c",
     "test": "mocha",
     "coverage": "c8 mocha",
-    "lint": "eslint ./src/**/**.mjs"
+    "lint": "eslint ./src/**/**.mjs",
+    "version": "npm-run-all version-sync test build && git add --all",
+    "release-patch": "npm version patch",
+    "version-sync": "node ./build/version.js sync"
   },
   "keywords": [
     "ui"
